objects/Down_Time__c.object
<CustomObject>
    <fields>
        <fullName>Down_Time_Over__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Down Time Over</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downtime_Status_Notes__c</fullName>
        <label>Downtime Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Please enter time in UTC. After saving it will show you time as per your user&apos;s timezone.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Impact__c</fullName>
        <label>Planned Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Please enter time in UTC. After saving it will show you time as per your user&apos;s timezone.</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Down_Time_Over__c , &apos;Completed&apos; , 
   IF(  Start_Date__c &gt;   NOW()   , &apos;Planned&apos; ,
      IF(End_Date__c &lt;  NOW(), &apos;Completed&apos;, &apos;In Progress&apos; ) 
   ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Down Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Down_Time_Over__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Down Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Down Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_Date_should_be_less_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>End Date can not be before Start Date</errorMessage>
    </validationRules>
</CustomObject>